@@ -1,3 +1,5 @@
+* 04-April-2008: minor enhancement & update of copyright & license
+
 * 01-Mar-2008: version 0.1 (initial version)
 	- Class(es): AbstractLanguage, FileLanguage, FileLanguageFactory, LanguageFactory, MlsException
 	- Interface(s): ILanguage, ILanguageFactory
